' Generated by UML Generator
' Encoded: nLbPRzj647xth-0Z5Sj1-ogqHdmeY874KIorVIYAOaMkfQt9fSh3iPl6lxsp9_SOqf9Jj0ysnDdbx3V7piKtJKlgjYkBe-QEyHsfIPba1McQixQjsRfhwLLMyINxYoRV7MrPJfECrLb1ZuxahkIYucrDiZRvSfGa9vb-kifd2UEj8BMiBUWiMG8tld7tN98MwE-hZ1JYfrW2B6tNp2pJfNmMAxngQODnkUxADQtT5IaGmfpo7A7Uaw83sZdRNDACbQIGc6bTUgUTmBzZWoeDf9mcdepJP432QU99qU_pPPWcc0JJ9CO_JIBqWCN5FX6uuGHs3zlJoIovhrWkQ68NuuBeON9sr9JJpodypP5pWVnpUBJpBclEn9aqhNZmAcnQLrL12HVxDhGrIfNi14BF4iSxGDLUyTlAWlzgF6_5IjfiATMkrvf7n_Tsj6PLlXJg3CokLa2q0G-qp7iNf02K2LMzPqtxWzqm1_BZQVAZq4boLjVaKQwVfaBt9pNzWu8gAdv3ILDnrwTekIkgHmhQcUjV4bXTYJTcoKBziDvd3qn3IQS9BgUX-r9Azy9aLBwIvrAWL4ZxwEoHLCyzokgUEdir66TBqwrBrhfUHtOWthtdY4f1QUsfnra75rbLBIdULLtTnFu1o-UiACYweFYE9zAs9Dj-_CnfdSOg1nq52dVE7d6-YuA1r3heoT-Est5IUX6FyRnhf3hz-2MkVh1La-SbOGL2NsmhxktNw8rNQXa6tL75COatzM33bNQGJ9CGiWfM0M1BzE1QgWTsOkwxFbMeLAbBK0LNGR627NUx79prGd5Al_LmnmNpN2if7R4yG58HJ2z9l_8q_8n_B22-4WwI6aTJhhA6e7hBsaL1l510EEz8yPwIU_gf0s-tdYJj5V6oVcoDTylg9j0Em0Wer5VKbjKq2kmDAOYmkfjH4D3J18LiZ7pUlu5PrLr6c0Ts20vo7AUcVtQqQULQcfF79en0iO602B9cNI6TgznHtX0HdeEuOUrunU6rJ5kFgOUnuaPl6QbjDCUHqeQKLSVRi2QHhg1VJdqaKG62euZgZ_WWRK28bR3_RLsLIDPnai8qgUKHQ15GalfkAG9DG5iGbllsu1aj1kiGuG8Ivq750PGJB9UMLQRhdsKWVFeYpC6ohudm8RW8rnM_xeeYrGNLIbmfMkJk1O8pLWEldeFttfbtZNOn1jR8A02w8R9gGgewZ9cVv_PWg4D5p4bvSyH2ECt7EeV4kNz5Yh7NfepuBsMmkI5yGrEeHfT8x2d9GqoEh7r9eN5fIvkHS_iyafLD43MvqqJNmUIvgnecFCWcM_qy-094RR8HXRrRuCbxt0DE8wn-AZOXzTBPzbpkR3IHesQGDLwOINgCSOqta7LSZat3Dlo34ZUDn0xIhrPRQlG92LZ_yg-zUVt2t7ujyyYrX_WeBhfNsTBvGqPtDXGSZ-z9WTe0_5x_bhaeD84Ii0kf8mpEf9g43GCUoC886os0aqW6H4HtZ32-hA12u06lWFWyBhTv7m26RnbXRHn4NM_ZE6E9kA3trAkWqG2ZRka3lf3J9glPJhbeC0k8d7We5Niu89uT4EQc2OB0n8ELE2QwzfVz2odsijkYgmElk8g_3HPbdLPTLMxV6h7txEXbMwbixVQMulbpLTyXrTLMD7-X0TUwCtG5YSijlxkEEzffWfm9vNDu8XJAuNb1nJNf5QcQrOX7K2gPrZOieKJ9WIo1MmotoNCbafyxVj6IoVR6qIUuXtk0FxAv5Z8vhjVVKjKRzT5CcP3Ov-N0QAxVCKU7T3KS_v4lJB_suXbA130TnmObyWWog7unN8wLRs0znJVrLbDRUqmBERJPk-HwsTYjF-wogsq7fEj0DJBv5wSbUhEEtkfXf38R2Bo73NPDlwNFxlkjTPTlQDHUgMd8J0zsD8FRMpZQR_nxnGsMVMQiQ-f4a-q6Nz3jcjclq_RWTjk9HRF8yRbFCFSOcFmWoZza8esg7K9Zf7IJo1O6pNDLxSOCAWKvjAh9JzcMvXrSkXVS7ZsRa41J1A_JiMv50jHWK86ZsdYau5PXn0aCaQSTm2OAD6u8Epp43QB9y-XhIF_Png_tWvc5dO0WGrwHSsW-qEu_DMPwcFgNrUamuJXx6MveLjKvEhVOBsgTxNQgQhLzgwY4Kr9lR4R_zRTuCgoLu0_-ihxYHMEOMSVpdwWJ2YYxMefEXS8Z_-Fvu9Xi_IgMFt6v9i6deJX37TE75kwoTK7qArLqjT_PqzA1WzrKQfZlbrBneM9hlrm4npmtnzf_J4dMZVh-ghpFzphhkAkh3_Fbk_byzVjo_kcd-VN5V9QSjLN9iYlUKcZMJU9mQUdt4xV6SX9sv4wouo8nZORVCH2dahaMRS3Y0O4_t9avWn-_Z6mEJjelJQh_ovsR11EIC7c-xOe2JQ3oMqdKDIgg1oNeAZIig4qGELcYYriEjs4K5tIqALIMssyobDKK6FU3wR0aFUnpwCH92zzq5rNsGLiB98awEQjnXtifxjrEbka_UrSd9q7Bx2o-WaNR4_baqnNfRvYLGue_MvsS_7tQCpAVGrw_FdNKvenVA_VOW6uliKFtO3uplPDGWd7KKJIKGtTXapTqu-XiRUoDWQaN-ahS9tjgm9UjYNGl9MYwMJ4anv9EkUQk6fGUKGlhqNhZ6gemkOKO5Jc-crZoAzVi7jM9t9QEu_UMUroMB80PvRo1gg0hYty0
' URL: http://www.plantuml.com/plantuml/uml/nLbPRzj647xth-0Z5Sj1-ogqHdmeY874KIorVIYAOaMkfQt9fSh3iPl6lxsp9_SOqf9Jj0ysnDdbx3V7piKtJKlgjYkBe-QEyHsfIPba1McQixQjsRfhwLLMyINxYoRV7MrPJfECrLb1ZuxahkIYucrDiZRvSfGa9vb-kifd2UEj8BMiBUWiMG8tld7tN98MwE-hZ1JYfrW2B6tNp2pJfNmMAxngQODnkUxADQtT5IaGmfpo7A7Uaw83sZdRNDACbQIGc6bTUgUTmBzZWoeDf9mcdepJP432QU99qU_pPPWcc0JJ9CO_JIBqWCN5FX6uuGHs3zlJoIovhrWkQ68NuuBeON9sr9JJpodypP5pWVnpUBJpBclEn9aqhNZmAcnQLrL12HVxDhGrIfNi14BF4iSxGDLUyTlAWlzgF6_5IjfiATMkrvf7n_Tsj6PLlXJg3CokLa2q0G-qp7iNf02K2LMzPqtxWzqm1_BZQVAZq4boLjVaKQwVfaBt9pNzWu8gAdv3ILDnrwTekIkgHmhQcUjV4bXTYJTcoKBziDvd3qn3IQS9BgUX-r9Azy9aLBwIvrAWL4ZxwEoHLCyzokgUEdir66TBqwrBrhfUHtOWthtdY4f1QUsfnra75rbLBIdULLtTnFu1o-UiACYweFYE9zAs9Dj-_CnfdSOg1nq52dVE7d6-YuA1r3heoT-Est5IUX6FyRnhf3hz-2MkVh1La-SbOGL2NsmhxktNw8rNQXa6tL75COatzM33bNQGJ9CGiWfM0M1BzE1QgWTsOkwxFbMeLAbBK0LNGR627NUx79prGd5Al_LmnmNpN2if7R4yG58HJ2z9l_8q_8n_B22-4WwI6aTJhhA6e7hBsaL1l510EEz8yPwIU_gf0s-tdYJj5V6oVcoDTylg9j0Em0Wer5VKbjKq2kmDAOYmkfjH4D3J18LiZ7pUlu5PrLr6c0Ts20vo7AUcVtQqQULQcfF79en0iO602B9cNI6TgznHtX0HdeEuOUrunU6rJ5kFgOUnuaPl6QbjDCUHqeQKLSVRi2QHhg1VJdqaKG62euZgZ_WWRK28bR3_RLsLIDPnai8qgUKHQ15GalfkAG9DG5iGbllsu1aj1kiGuG8Ivq750PGJB9UMLQRhdsKWVFeYpC6ohudm8RW8rnM_xeeYrGNLIbmfMkJk1O8pLWEldeFttfbtZNOn1jR8A02w8R9gGgewZ9cVv_PWg4D5p4bvSyH2ECt7EeV4kNz5Yh7NfepuBsMmkI5yGrEeHfT8x2d9GqoEh7r9eN5fIvkHS_iyafLD43MvqqJNmUIvgnecFCWcM_qy-094RR8HXRrRuCbxt0DE8wn-AZOXzTBPzbpkR3IHesQGDLwOINgCSOqta7LSZat3Dlo34ZUDn0xIhrPRQlG92LZ_yg-zUVt2t7ujyyYrX_WeBhfNsTBvGqPtDXGSZ-z9WTe0_5x_bhaeD84Ii0kf8mpEf9g43GCUoC886os0aqW6H4HtZ32-hA12u06lWFWyBhTv7m26RnbXRHn4NM_ZE6E9kA3trAkWqG2ZRka3lf3J9glPJhbeC0k8d7We5Niu89uT4EQc2OB0n8ELE2QwzfVz2odsijkYgmElk8g_3HPbdLPTLMxV6h7txEXbMwbixVQMulbpLTyXrTLMD7-X0TUwCtG5YSijlxkEEzffWfm9vNDu8XJAuNb1nJNf5QcQrOX7K2gPrZOieKJ9WIo1MmotoNCbafyxVj6IoVR6qIUuXtk0FxAv5Z8vhjVVKjKRzT5CcP3Ov-N0QAxVCKU7T3KS_v4lJB_suXbA130TnmObyWWog7unN8wLRs0znJVrLbDRUqmBERJPk-HwsTYjF-wogsq7fEj0DJBv5wSbUhEEtkfXf38R2Bo73NPDlwNFxlkjTPTlQDHUgMd8J0zsD8FRMpZQR_nxnGsMVMQiQ-f4a-q6Nz3jcjclq_RWTjk9HRF8yRbFCFSOcFmWoZza8esg7K9Zf7IJo1O6pNDLxSOCAWKvjAh9JzcMvXrSkXVS7ZsRa41J1A_JiMv50jHWK86ZsdYau5PXn0aCaQSTm2OAD6u8Epp43QB9y-XhIF_Png_tWvc5dO0WGrwHSsW-qEu_DMPwcFgNrUamuJXx6MveLjKvEhVOBsgTxNQgQhLzgwY4Kr9lR4R_zRTuCgoLu0_-ihxYHMEOMSVpdwWJ2YYxMefEXS8Z_-Fvu9Xi_IgMFt6v9i6deJX37TE75kwoTK7qArLqjT_PqzA1WzrKQfZlbrBneM9hlrm4npmtnzf_J4dMZVh-ghpFzphhkAkh3_Fbk_byzVjo_kcd-VN5V9QSjLN9iYlUKcZMJU9mQUdt4xV6SX9sv4wouo8nZORVCH2dahaMRS3Y0O4_t9avWn-_Z6mEJjelJQh_ovsR11EIC7c-xOe2JQ3oMqdKDIgg1oNeAZIig4qGELcYYriEjs4K5tIqALIMssyobDKK6FU3wR0aFUnpwCH92zzq5rNsGLiB98awEQjnXtifxjrEbka_UrSd9q7Bx2o-WaNR4_baqnNfRvYLGue_MvsS_7tQCpAVGrw_FdNKvenVA_VOW6uliKFtO3uplPDGWd7KKJIKGtTXapTqu-XiRUoDWQaN-ahS9tjgm9UjYNGl9MYwMJ4anv9EkUQk6fGUKGlhqNhZ6gemkOKO5Jc-crZoAzVi7jM9t9QEu_UMUroMB80PvRo1gg0hYty0
' Generated on: 2026-03-31T18:30:08.325373

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Signable {
  +sign(signer: String): void
  +isSigned(): boolean
}

class Contract {
  -contractId: int
  -title: String
  -contractDate: LocalDate
  -status: ContractStatus
  -notes: String
  -contractNumber: String
  -startDate: LocalDate
  -endDate: LocalDate
  -value: BigDecimal
  -terms: String
  -signed: boolean
  -signedBy: String
  -signedAt: LocalDate
  --
  +Contract()
  +sign(signer: String): void
  +isSigned(): boolean
  +terminate(): void
  +renew(): void
  +isActive(): boolean
  +getContractValue(): BigDecimal
  +printInfo(): void
}

class Timesheet {
  -timesheetId: int
  -periodStart: LocalDate
  -periodEnd: LocalDate
  -status: TimesheetStatus
  -entries: List<TimesheetEntry> = new ArrayList<>()
  -rejectionReason: String
  -employee: Employee
  -project: Project
  --
  +Timesheet()
  +addEntry(): void
  +removeEntry(): void
  +submit(): void
  +approve(): void
  +reject(): void
  +getTotalHours(): BigDecimal
  +getBillableHours(): BigDecimal
  ~attachOwner(): void
  +printInfo(): void
}

class Client {
  -clientId: int
  -name: String
  -industry: String
  -contactName: String
  -contactEmail: String
  -contactPhone: String
  -projects: List<Project> = new ArrayList<>()
  --
  +Client()
  +getClientId(): int
  +getName(): String
  +updateContact(): void
  +addProject(): void
  +getActiveProjects(): List<Project>
  +printInfo(): void
}

class PermanentEmployee {
  -benefitPlan: String
  -annualLeaveQuota: int
  --
  +PermanentEmployee()
  +getBenefitPlan(): String
  +updateBenefitPlan(): void
  +getAnnualLeaveQuota(): int
  +requestLeave(): void
  +printInfo(): void
  +calculateCompensation(): BigDecimal
}

class Invoice {
  -invoiceId: int
  -title: String
  -invoiceDate: LocalDate
  -status: InvoiceStatus
  -notes: String
  -amount: BigDecimal
  -signed: boolean
  -signedBy: String
  -signedAt: LocalDate
  --
  +Invoice()
  +generateFromTimesheet(): void
  +sign(signer: String): void
  +isSigned(): boolean
  +markSent(): void
  +markPaid(): void
  +cancel(): void
  +getAmount(): BigDecimal
  +printInfo(): void
}

class Department {
  -departmentId: int
  -name: String
  -employees: List<Employee> = new ArrayList<>()
  -positions: List<Position> = new ArrayList<>()
  -manager: Employee
  --
  +Department()
  +getDepartmentId(): int
  +getName(): String
  +setName(): void
  +addEmployee(): void
  +removeEmployee(): void
  +assignManager(): void
  +addPosition(): void
  +getEmployeeCount(): int
  +printInfo(): void
}

class Position {
  -positionId: int
  -title: String
  -level: String
  -minSalary: BigDecimal
  -maxSalary: BigDecimal
  -description: String
  --
  +Position()
  +getTitle(): String
  +setDescription(): void
  +isSalaryInRange(): boolean
  +updateSalaryRange(): void
  +printInfo(): void
}

class TimesheetEntry {
  -entryId: int
  -workDate: LocalDate
  -hours: BigDecimal
  -billable: boolean
  -notes: String
  --
  +TimesheetEntry()
  +updateHours(): void
  +markBillable(): void
  +markNonBillable(): void
  +getHours(): BigDecimal
  +getEntryId(): int
  +getWorkDate(): LocalDate
  +isBillable(): boolean
  +getNotes(): String
}

class ProjectAssignment {
  -assignmentStartDate: LocalDate
  -assignmentEndDate: LocalDate
  -roleOnProject: String
  -employee: Employee
  -project: Project
  --
  +ProjectAssignment()
  +updateRole(): void
  +updateAssignmentPeriod(): void
  +isActive(): boolean
  +getAssignmentDuration(): int
  ~attach(): void
  +printInfo(): void
}

class Project {
  -projectId: int
  -name: String
  -description: String
  -startDate: LocalDate
  -endDate: LocalDate
  -status: ProjectStatus
  -budget: BigDecimal
  -client: Client
  -staffing: List<ProjectAssignment> = new ArrayList<>()
  -contracts: List<Contract> = new ArrayList<>()
  -invoices: List<Invoice> = new ArrayList<>()
  -timesheets: List<Timesheet> = new ArrayList<>()
  --
  +Project()
  +getProjectId(): int
  +getName(): String
  +getStatus(): ProjectStatus
  +updateSchedule(): void
  +updateBudget(): void
  +changeStatus(): void
  +assignEmployee(): ProjectAssignment
  +assignEmployee(): ProjectAssignment
  +addContract(): void
  +addInvoice(): void
  +getTotalBilledAmount(): BigDecimal
  ~setClient(): void
  ~addTimesheetRecord(): void
  +printInfo(): void
}

class ContractEmployee {
  -contractStartDate: LocalDate
  -contractEndDate: LocalDate
  -hourlyRate: BigDecimal
  --
  +ContractEmployee()
  +getContractDuration(): int
  +extendContract(): void
  +updateHourlyRate(): void
  +isContractActive(): boolean
  +calculateCompensation(): BigDecimal
  +printInfo(): void
  +calculateCompensation(): BigDecimal
}

abstract class Employee {
  -{static} TIMESHEET_SEQUENCE: Integer = 1
  -employeeId: int
  -firstName: String
  -lastName: String
  -email: String
  -hireDate: LocalDate
  -salary: BigDecimal
  -position: Position
  -department: Department
  -assignments: List<ProjectAssignment> = new ArrayList<>()
  -timesheets: List<Timesheet> = new ArrayList<>()
  --
  +Employee()
  +getEmployeeId(): int
  +getFullName(): String
  +getEmail(): String
  +setEmail(): void
  +getHireDate(): LocalDate
  +getSalary(): BigDecimal
  +updateSalary(): void
  +assignPosition(): void
  +createTimesheet(): Timesheet
  +printInfo(): void
  +calculateCompensation(): BigDecimal
  ~addAssignment(): void
  ~setDepartment(): void
}

Timesheet o-- TimesheetEntry
Department "1" o-- "0..*" Employee : employees
Department "0..1" --> "0..1" Employee : manager
Department "1" o-- "0..*" Position : positions
Employee <|-- PermanentEmployee
Employee <|-- ContractEmployee
Invoice ..|> Signable
Contract ..|> Signable
Employee "0..*" --> "1" Position : holds
Client "1" o-- "0..*" Project : projects
Employee "1" -- "0..*" ProjectAssignment : assignments
Project "1" *-- "0..*" ProjectAssignment : staffing
Employee "1" -- "0..*" Timesheet : submits
Project "1" -- "0..*" Timesheet : records
Timesheet "1" *-- "1..*" TimesheetEntry : entries
Project "1" *-- "0..*" Invoice : invoices
Project "1" *-- "0..*" Contract : contracts
@enduml
